# soncomp

./: LICENSE  README.md  pyproject.toml
soncomp/: main.py
